src/components/Calendar.css
.fc .fc-scrollgrid,
.fc .fc-scrollgrid-section > td,
.fc .fc-timegrid-axis {
  border-color: transparent;
}

.fc .fc-timegrid-slot {
  border-color: var(--chakra-colors-border-emphasized);
  border-width: 1.5px;
  border-left-color: transparent;
}

.fc td,
.fc th {
  border-color: var(--chakra-colors-border-emphasized);
  border-width: 1.5px;
}

.fc .fc-scrollgrid-section > th:nth-child(1),
.fc .fc-col-header-cell:last-child {
  border-right-color: transparent;
}

.fc .fc-scrollgrid-section-sticky > * {
  background: transparent;
}

.fc .fc-col-header-cell .fc-scrollgrid-sync-inner {
  background: var(--chakra-colors-bg);
}

.fc .fc-timegrid-event-harness-inset {
  z-index: auto !important;
}

.fc .fc-timegrid-event-harness-inset .fc-timegrid-event {
  box-shadow: var(--chakra-colors-bg) 0px 0px 0px 1.5px;
}

.fc .fc-scroller-harness {
  overflow: visible;
}

.fc .fc-timegrid-slot-label {
  border: none;
}

.fc .fc-timegrid-slot-label-frame {
  position: relative;
}

.fc .fc-timegrid-slot-label-cushion {
  font-size: 0.75rem;
  line-height: 1.3;
  opacity: 0.7;
  position: absolute;
  top: -1.25rem;
  right: 0.25rem;
  z-index: 2;
}

.fc .fc-timegrid-event {
  border-radius: 0;
  border-width: 0;
  padding-left: 0.25rem;
}

.fc .fc-col-header-cell-cushion {
  font-size: 0.8rem;
  letter-spacing: 0.05rem;
  text-transform: uppercase;
}

